refactoring commands generation and correct direction orientation